# room-mapping

./: .gitignore  PROJECT_STATUS.txt  README.md
esp32_firmware/: platformio.ini
esp32_firmware/include/: config.h
esp32_firmware/src/: main.cpp
src/room_mapping_robot/: CMakeLists.txt  package.xml
src/room_mapping_robot/config/: nav2_params.yaml  slam_params.yaml
src/room_mapping_robot/launch/: gazebo_launch.py  navigation_launch.py  slam_launch.py  spawn_robot.launch.py
src/room_mapping_robot/rviz/: mapping.rviz  nav2_rviz.rviz
src/room_mapping_robot/scripts/: autonomous_explorer.py  teleop_helper.py
src/room_mapping_robot/urdf/: robot.urdf.xacro
src/room_mapping_robot/worlds/: room.world
